# cscheid.net

./: .gitignore  Makefile  _config.yml  bio.txt  blog.html  gdpr.md  google-scholar.html  index.html  keybase.txt  license.md  replication.md  robots.txt
_includes/: footer.html  footer_main.html  header_contents.html  kitchen_sink.html
_layouts/: bootstrap.html  bootstrap_main.html  bootstrap_sans.html  bootstrap_wide.html  d3_page.html  d3_page_narrow.html  d3_project.html  d3_project_narrow.html  default.html  kitchen_sink.html  lux_project.html  main.css  markdown_talk.html  paper.html  post.html  post_paper.html  revealjs.html  slide-inline-frame.html  static.html  static_wide.html
_posts/: 2005-06-01-triangulating-point-set-surfaces.markdown  2005-10-01-vistrails-enabling-interactive-multiple-view-visualizations.markdown  2005-11-01-practical-cfd-simulations.markdown  2006-03-01-direct-re-meshing.markdown  2006-06-01-managing-the-evolution.markdown  2006-10-01-high-quality-extraction.markdown  2007-07-01-hardware-assisted-point-based.markdown  2007-10-01-querying-and-creating-visualizations-by-analogy.markdown  2008-02-01.markdown  2008-07-01.markdown  2008-10-01-edge-groups.markdown  (+97 more)
talks/tandon-march-2019/iframes/polya-urn/: Cargo.toml  Makefile  index.html  index.js  main.css  polya-urn-1.html  polya-urn-1.js  polya-urn-2.html  polya-urn-2.js  polya-urn-3.html  polya-urn-3.js  polya-urn-4.html  polya-urn-4.js  polya-urn-5.html  polya-urn-5.js  polya-urn-6.html  polya-urn-6.js  wasm_pack_load_module.js
talks/tandon-march-2019/iframes/polya-urn/src/: lib.rs
(+740 files in other folders)
