[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.6"
serde = "^1.0.59"
serde_derive = "^1.0.59"
js-sys = "0.3.15"

[dependencies.wasm-bindgen]
version = "0.2.38"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
